# Chat-Automation-Bot

./: .env.example  .gitignore  LICENSE  README.md  admin.py  bot.py  config.py  database.py  main.py  memory.py  openai_service.py  pyproject.toml  requirements.txt
src/bot/: __main__.py  admin.py  bot.py  config.py  database.py  main.py  memory.py  openai_service.py
